[tool.poetry]
name = "hashpass"
version = "0.1.1"
description = "哈希密码生成程序"
authors = ["guaifish <guaifish@foxmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/guaifish/hashpass"
homepage = "https://github.com/guaifish/hashpass"
packages = [
    { include = "main.py"},
]

[tool.poetry.dependencies]
python = "^3.8"
gooey = "^1.0.3"
pyperclip = "^1.8.0"
pyinstaller = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
